[package]
name = "breweri"
description = "Simple TUI frontend for brew."
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Vonr/breweri"
repository = "https://github.com/Vonr/breweri"
keywords = ["tui", "terminal", "frontend", "homebrew"]
include = ["src/**/*", "README.md"]
rust-version = "1.71.0"

[profile.release]
opt-level = 3
lto = false
codegen-units = 1
debug = 0
strip = "symbols"

[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

[dependencies]
atomic = "0.6.0"
parking_lot = "0.12.1"
nohash-hasher = "0.2.0"
compact_strings = "4.0.2"
arc-swap = "1.7.1"

[dependencies.crossterm]
version = "0.27.0"
default-features = false
features = ["events"]

[dependencies.tokio]
version = "1.37.0"
features = ["process", "rt-multi-thread", "time", "macros", "sync"]

[dependencies.tui]
package = "ratatui"
version = "0.26.1"
features = ["crossterm"]

[dependencies.bytemuck]
version = "1.15.0"
features = ["derive"]
